--- a/wwr/styles/site-plan-rafting.html
+++ b/wwr/styles/site-plan-rafting.html
@@ -11,7 +11,7 @@
   <header>
     <h1>White Water Rafting Site Plan</h1>
     <h2>Alisia Frazier</h2>
-    <h2>WDD 130-[section]</h2>
+    <h2>WDD 130-Online</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -53,7 +53,7 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#2f6690]</td>
+        <td class="Primary">[#2f6690]</td>
         <td class="secondary">[#81C3D7]</td>
         <td class="accent1">[#d9dcd6]</td>
         <td class="accent2">[#16425b]</td>
@@ -66,11 +66,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font:[Font Name Here]
+      Heading Font: Lacquer
       <!-- change this -->
     </h4> 
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Overlock
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
