--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       <nav>
         <a href="aboutme/aboutme.html">About Me Page</a>
         <a href="wwr/styles/site-plan-rafting.html">White Water Rafting Project</a>
+        <a href="wwr/styles/index.html">White Water Rafting Home Page</a>
       </nav>
     </body>
