--- a/wwr/styles/index.html
+++ b/wwr/styles/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <header>
-    <a id="logo link" href="index.html">
+    <a id="logo-link" href="index.html">
     <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png" alt="Dry Oar Logo">
     </a>
     <nav>
@@ -19,13 +19,12 @@
    </header> 
    <div id="hero">
     <div id="hero-box">
-        <img id="hero-box" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="hero" img/>
+        <img id="hero-square" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="square" img/>
         <h1 class="home-title">Have An Adventure</h1>
         <h4>Make Memories with Dry Oar</h4>
         <div>
             <a Class='book' href="contactus/html">Book Now</a>
         </div>
-    </section>
    </div>
    <main class="home-grid">
     <section class="rivers-card">
@@ -51,7 +50,7 @@
     </section>
    </main>
    <footer>
-    <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+    <p>Dry Oar &copy; 2025 - Alisia Frazier/p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
@@ -63,6 +62,7 @@
         </a>
         <a href="https://instagram.com">
             <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+        </a>
     </div>
    </footer>
 </body>
