--- a/wwr/styles/index.html
+++ b/wwr/styles/index.html
@@ -19,7 +19,8 @@
    </header> 
    <div id="hero">
     <div id="hero-box">
-        <img id="hero-square" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="square" img/>
+        <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="water">
+    </div>
         <h1 class="home-title">Have An Adventure</h1>
         <h4>Make Memories with Dry Oar</h4>
         <div>
