--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="plzlink.css">
 </head>
 <body>
+    <div id="chicken">
    <header>
     <a id="logo-link" href="index.html">
     <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png" alt="Dry Oar Logo">
@@ -43,6 +45,7 @@
         <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
         <h2>Rapids</h2>
     </section>
+    <div id="background"></div>
     <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
@@ -51,11 +54,11 @@
     </section>
    </main>
    <footer>
-    <p>Dry Oar &copy; 2025 - Alisia Frazier/p>
+    <p>Dry Oar &copy; 2025 - Alisia Frazier
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a href="https://facebook.com" target="_blank">
             <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
         </a>
         <a href="https://twitter.com">
@@ -66,5 +69,6 @@
         </a>
     </div>
    </footer>
+   </div>
 </body>
 </html>
