--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>welcome to WDD130 Web Projects</h1>  
       <nav>
         <a href="aboutme/aboutme.html">About Me Page</a>
-        <a href="wwr/styles/site-plan-rafting.html">White Water Rafting Project</a>
-        <a href="wwr/styles/styles/index.html">White Water Rafting Home Page</a>
+        <a href="wwr/site-plan-rafting.html">White Water Rafting Project</a>
+        <a href="wwr/index.html">White Water Rafting Home Page</a>
       </nav>
     </body>
