new links for me

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <a href="aboutme/aboutme.html">About Me Page</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Project</a>
         <a href="wwr/index.html">White Water Rafting Home Page</a>
+        <a href="positioning2/positioning.html">Positioning Project</a>
       </nav>
     </body>
