--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Project</a>
         <a href="wwr/index.html">White Water Rafting Home Page</a>
         <a href="positioning2/positioning.html">Positioning Project</a>
+        <a href="birchbite/site-plan.html"> Birch Bytes Project</a>
       </nav>
     </body>
