--- a/wwr/site-plan-faq.html
+++ b/wwr/site-plan-faq.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="site-plan-faq.css">
     <img src="wireframe.png" alt="wireframe">
