--- a/birchbite/site-plan.html
+++ b/birchbite/site-plan.html
@@ -95,10 +95,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Contact Me <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Examples  <!-- change this -->
         </div>
 
         <div class="top">
@@ -120,21 +120,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The main reason people will visit my website is to find affordable yet professional web design services. My goal is to offer high-quality, customized websites at a fraction of the cost of larger agencies. When potential clients arrive on my site, I expect they will have several key questions in mind, particularly about pricing and what services are included. To address this, I plan to include a detailed breakdown of my rates—for example, how much a main page costs, how much each additional child page would be, and any added fees for optional features such as a unique domain name or a custom-designed logo. Providing this transparency will help visitors understand what they can expect and encourage them to reach out for a personalized quote.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="birch-woods.jpg" alt="image for homepage">
+        <img src="birch-path.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Contact Me</h3>
       <p>
-        [Written copy for the Page 2 here]
+       Another important function of my website will be to allow customers to easily contact me for more information or to request an estimate. I may include a dedicated contact page or a form embedded in the footer of each page so it’s easily accessible. In addition, visitors should be able to view my portfolio to see examples of my work. This is crucial for building credibility and trust. I plan to showcase screenshots of web pages I have designed or even link to live sites I’ve created, allowing potential clients to see the quality and style of my work firsthand.
+
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for the Contact Me Page</p>
+        <img src="small-business.jpg" alt="image for page">
+        <img src="lite-woods.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Examples Page</h3>
       <p>
+        To make my site stand out, I also plan to create a memorable slogan and decide on a consistent aesthetic theme. Since I named my business Birch Bytes Web Design, I am leaning toward a woodsy, natural aesthetic that reflects creativity, simplicity, and approachability. In addition, I intend to include a “Frequently Asked Questions” section to address common inquiries and a page explaining why clients should choose me over competitors. I also want to describe the types of designs and layouts I can create—whether minimalist, modern, or business-oriented—so that clients can get a sense of my range and flexibility. By combining clear communication, strong visual presentation, and competitive pricing, I aim to make Birch Bytes Web Design a trusted and appealing choice for small business owners seeking an affordable, professional website.
+
+      </p>
+      <p>Images for the Examples Page</p>
+        <img src="beard.jpg" alt="image for page">
+        <img src="computer-woods.jpg" alt="image for page">
