--- a/birchbite/site-plan.html
+++ b/birchbite/site-plan.html
@@ -146,3 +146,10 @@
       <p>Images for the Examples Page</p>
         <img src="beard.jpg" alt="image for page">
         <img src="computer-woods.jpg" alt="image for page">
+        <p>Wireframes</p>
+        <p>page 1</p>
+        <img src="page_one.png" alt="home page">
+        <p>page 2</p>
+        <img src="page_two.png" alt="Contact page">
+        <p>page 3</p>
+        <img src="page_three.png" alt="FAQ page">
