--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,15 +10,15 @@
     <div id="chicken">
    <header>
     <a id="logo-link" href="index.html">
-    <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png" alt="Dry Oar Logo">
+        <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png" alt="Dry Oar Logo">
     </a>
     <nav>
         <a href="index.html">Home</a>
-        <a href="site-plan-faq.html">Page 2</a>
+        <a href="sub-one.html">FAQ</a>
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
     </nav>
-   </header> 
+</header>
    <div id="hero">
     <div id="hero-box">
         <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="water">
@@ -26,7 +26,7 @@
         <h1 class="home-title">Have An Adventure</h1>
         <h4>Make Memories with Dry Oar</h4>
         <div>
-            <a Class='book' href="contactus/html">Book Now</a>
+           <a class="book" href="contactus.html">Book Now</a>
         </div>
    </div>
    <main class="home-grid">
@@ -54,8 +54,8 @@
     </section>
    </main>
    <footer>
-    <p>Dry Oar &copy; 2025 - Alisia Frazier
-    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p>Dry Oar &copy; 2025 - Alisia Frazier</p>
+<p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
